--- a/backend/app/assets/stylesheets/spree/backend/components/_icons.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_icons.scss
@@ -37,15 +37,7 @@
   height: 1.6rem !important;
 }
 
-// Spree Icons BLACK ################
-
-
-
-
-
-// BELOW HERE IS NEW
-
-
+// Spree Icons ################
 .icon-account {
   background-image: url("data:image/svg+xml;charset=utf8,%3C?xml version='1.0' encoding='UTF-8' standalone='no'?%3E%3C!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'%3E%3Csvg width='100%25' height='100%25' viewBox='0 0 512 512' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xml:space='preserve' xmlns:serif='http://www.serif.com/' style='fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;'%3E%3Cpath id='icon-account' d='M492.308,256c0,-130.298 -106,-236.308 -236.308,-236.308c-130.308,0 -236.308,106.01 -236.308,236.308c0,66.631 27.83,126.792 72.343,169.792c1.042,1.357 2.276,2.457 3.721,3.384c42.166,39.046 98.376,63.132 160.244,63.132c61.868,0 118.078,-24.086 160.244,-63.132c1.445,-0.927 2.679,-2.027 3.721,-3.384c44.513,-43 72.343,-103.161 72.343,-169.792Zm-236.308,-206.769c114.019,0 206.769,92.759 206.769,206.769c0,48.344 -16.803,92.767 -44.706,128.017c-12.811,-41.311 -49.381,-73.652 -99.016,-88.533c27.049,-19.575 44.741,-51.29 44.741,-87.128c0,-59.356 -48.346,-107.644 -107.788,-107.644c-59.442,0 -107.788,48.288 -107.788,107.644c0,35.838 17.692,67.553 44.741,87.128c-49.634,14.881 -86.205,47.222 -99.015,88.533c-27.904,-35.25 -44.707,-79.673 -44.707,-128.017c0,-114.01 92.75,-206.769 206.769,-206.769Zm-78.25,159.125c0,-43.068 35.096,-78.106 78.25,-78.106c43.154,0 78.25,35.038 78.25,78.106c0,43.067 -35.096,78.106 -78.25,78.106c-43.154,0 -78.25,-35.039 -78.25,-78.106Zm-58.99,201.874c4.44,-54.153 61.865,-94.23 137.24,-94.23c75.375,0 132.801,40.077 137.24,94.23c-36.551,32.562 -84.549,52.539 -137.24,52.539c-52.691,0 -100.689,-19.977 -137.24,-52.539Z' style='fill-rule:nonzero;stroke:%23000;stroke-width:9.5px;'/%3E%3C/svg%3E");
 }
