Add back in the dropdown menu in taxons

--- a/backend/app/assets/stylesheets/spree/backend/components/_buttons.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_buttons.scss
@@ -41,7 +41,9 @@
 
 .btn-outline-dark,
 .btn-outline-secondary {
-  &:hover .icon {
+  &:hover .icon,
+  &:focus .icon,
+  &:active .icon, {
     @extend .icon-white ;
   }
 }
