--- a/backend/app/assets/stylesheets/spree/backend/components/_taxon_products_view.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_taxon_products_view.scss
@@ -20,7 +20,16 @@ ul#taxon_products, tbody#sortVert {
   -o-user-select: none;
   user-select: none;
 
+  .dropdown-menu {
+    min-width: 8rem;
+  }
+
+  .products-ddb::after {
+    display: none;
+  }
+
   li.moving-this div.card {
     background: #48B0F7 !important;
+
   }
 }
