improve look and feel.

--- a/backend/app/assets/stylesheets/spree/backend/components/_taxon_products_view.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_taxon_products_view.scss
@@ -29,7 +29,6 @@ ul#taxon_products, tbody#sortVert {
   }
 
   li.moving-this div.card {
-    background: #48B0F7 !important;
-
+    border-color: #48B0F7;
   }
 }
