--- a/backend/app/views/spree/admin/products/_autocomplete.js.erb
+++ b/backend/app/views/spree/admin/products/_autocomplete.js.erb
@@ -6,7 +6,7 @@
           <span class="icon icon-move icon-lg"></span>
         </a>
         <div class="dropdown ">
-          <button class="btn btn-outline-secondary dropdown-toggle products-ddb" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <button class="btn btn-outline-secondary dropdown-toggle products-ddb btn-sm" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span class="icon icon-chevron-down"></span>
           </button>
           <div class="dropdown-menu dropdown-menu-right p-0 mt-1" aria-labelledby="dropdownMenuButton">
