--- a/backend/app/views/spree/admin/variants/_split.js.erb
+++ b/backend/app/views/spree/admin/variants/_split.js.erb
@@ -23,7 +23,7 @@
     </td>
     <td class='actions text-center'>
       <a href='#' class='cancel-split with-tip btn btn-sm btn-outline-secondary' title='Cancel'>
-        <span class="icon icon-chevron-left"></span>
+        <span class="icon icon-close"></span>
       </a>
       <a href='#' class='icon-save-split save-split with-tip btn btn-sm btn-success' title='Save'>
         <span class="icon icon-save"></span>
