--- a/backend/app/views/spree/admin/option_types/edit.html.erb
+++ b/backend/app/views/spree/admin/option_types/edit.html.erb
@@ -21,7 +21,7 @@
     <div class="card-body">
       <%= render partial: 'form', locals: { f: f } %>
     </div>
-    <table class="table table-condensed table-bordered sortable" data-hook data-sortable-link="<%= update_values_positions_admin_option_types_url %>">
+    <table class="table table-condensed sortable" data-hook data-sortable-link="<%= update_values_positions_admin_option_types_url %>">
       <thead data-hook="option_header">
         <tr>
           <th colspan="2"><%= Spree.t(:name) %> <span class="required">*</span></th>
