--- a/frontend/app/views/spree/shared/_login_bar.html.erb
+++ b/frontend/app/views/spree/shared/_login_bar.html.erb
@@ -1,12 +1,12 @@
 <% if spree_current_user %>
-  <li>
-    <%= link_to Spree.t(:my_account), spree.account_path %>
+  <li class='nav-item'>
+    <%= link_to Spree.t(:my_account), spree.account_path ,{class: 'nav-link'}%>
   </li>
-  <li>
-    <%= link_to Spree.t(:logout), spree.logout_path %>
+  <li class='nav-item'>
+    <%= link_to Spree.t(:logout), spree.logout_path ,{class: 'nav-link'}%>
   </li>
 <% else %>
-  <li id="link-to-login">
-    <%= link_to Spree.t(:login), spree.login_path %>
+  <li id="link-to-login" class='nav-item'>
+    <%= link_to Spree.t(:login), spree.login_path,{class: 'nav-link'} %>
   </li>
 <% end %>
