--- a/guides/src/styles/app.css
+++ b/guides/src/styles/app.css
@@ -77,6 +77,10 @@ li > code:hover {
   border-color: #99cc00;
 }
 
+.hover-spree-green:hover {
+  color: #779e01;
+}
+
 .spree-green-2 {
   color: #66a80f;
 }
