--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/quantity_select.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/quantity_select.scss
@@ -31,6 +31,7 @@
     border-radius: 0;
     border: 1px solid theme-color('borders');
     height: auto;
+    z-index: 1;
     @include media-breakpoint-up(sm) {
       font-size: font-px-to-rem(28px);
       border: 2px solid theme-color("borders");
