Move frontend views

--- a/backend/app/views/spree/admin/return_authorizations/_form.html.erb
+++ b/backend/app/views/spree/admin/return_authorizations/_form.html.erb
@@ -9,7 +9,7 @@
             <%= check_box_tag 'select-all' %>
           <% end %>
         </th>
-        <th><%= Spree.t('admin.return_authorization.product') %></th>
+        <th><%= Spree.t(:product) %></th>
         <th><%= Spree.t(:status) %></th>
         <th><%= Spree.t(:charged) %></th>
         <th><%= Spree.t(:purchased_quantity) %></th>
