--- a/frontend/app/views/spree/home/index.html.erb
+++ b/frontend/app/views/spree/home/index.html.erb
@@ -1,14 +1,139 @@
-<% @body_id = 'home-page' %>
-<% content_for :sidebar do %>
-  <div data-hook="homepage_sidebar_navigation">
-    <%= render partial: 'spree/shared/taxonomies' %>
+<div class="homepage-hero-image mb-3 position-relative">
+  <img class="lazyload hero-image position-absolute"
+    data-src="<%= asset_path('homepage/summer_collection.jpg') %>"
+    data-srcset="<%= image_source_set('homepage/summer_collection') %>"
+    alt="<%= Spree.t('homepage.summer_collection')%>" />
+
+  <div class="hero-content">
+    <div class="homepage-hero-image-text mb-2 mx-auto pb-3 pb-md-4">
+      <%= Spree.t('homepage.summer_collection') %>
+    </div>
+    <div>
+      <%= link_to Spree.t('homepage.shop_now'), products_path, class: 'btn btn-primary spree-btn px-5' %>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-6">
+
+      <div class="homepage-taxon-box mb-3">
+        <%= link_to nested_taxons_path('men') do %>
+          <img class="w-100 lazyload"
+            data-src="<%= asset_path('homepage/men.jpg') %>"
+            data-srcset="<%= image_source_set('homepage/men') %>"
+            alt="<%= Spree.t('homepage.men')%>" />
+
+          <div class="homepage-taxon-box-text">
+            <h3><%= Spree.t('homepage.men') %></h3>
+          </div>
+        <% end %>
+      </div>
+
+      <div class="homepage-taxon-box">
+        <%= link_to nested_taxons_path('sportswear') do %>
+          <img class="w-100 lazyload"
+            data-src="<%= asset_path('homepage/sportswear.jpg') %>"
+            data-srcset="<%= image_source_set('homepage/sportswear') %>"
+            alt="<%= Spree.t('homepage.sportswear')%>" />
+
+          <div class="homepage-taxon-box-text" role="img" aria-label="<%= Spree.t('homepage.sportswear') %>">
+            <h3><%= Spree.t('homepage.sportswear') %></h3>
+          </div>
+        <% end %>
+      </div>
+
+    </div>
+
+    <div class="col-6 d-flex flex-column">
+
+      <div class="homepage-taxon-box flex-grow-1">
+        <%= link_to nested_taxons_path('women') do %>
+          <img class="w-100 lazyload"
+            data-src="<%= asset_path('homepage/women.jpg') %>"
+            data-srcset="<%= image_source_set('homepage/women') %>"
+            alt="<%= Spree.t('homepage.women')%>" />
+
+          <div class="homepage-taxon-box-text">
+            <h3><%= Spree.t('homepage.women') %></h3>
+          </div>
+        <% end %>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+<% if @bestsellers_products.any? %>
+  <div class="my-3">
+    <p class="font-weight-bold text-center homepage-carousel-text"><%= Spree.t('homepage.bestsellers') %></p>
+
+    <%= render 'carousel', id: 'bestsellers-carousel', products: @bestsellers_products %>
   </div>
 <% end %>
 
-<div data-hook="homepage_products">
-  <% cache(cache_key_for_products) do %>
-    <%= render partial: 'spree/shared/products', locals: { products: @products } %>
-  <% end %>
+<div class="homepage-fashion-trends-box mb-3">
+  <div class="text-center">
+    <div class="homepage-fashion-trends-box-summer-text mb-1"><%= Spree.t('homepage.summer_2019') %></div>
+    <div class="homepage-fashion-trends-box-fashion-trends-text mb-2"><%= Spree.t('homepage.fashion_trends') %></div>
+    <div class="homepage-fashion-trends-box-description-text text-center mb-3">
+      <%= Spree.t('homepage.fashion_trends_note') %>
+    </div>
+    <%= link_to Spree.t('homepage.read_more'), nested_taxons_path('trending'), class: 'btn px-5 spree-btn btn-outline-primary' %>
+  </div>
 </div>
 
-<%= products_structured_data(@products) %>
+<% if @trending_products.any? %>
+  <div class="mb-3">
+    <p class="font-weight-bold text-center homepage-carousel-text"><%= Spree.t('homepage.trending') %></p>
+
+    <%= render 'carousel', id: 'trending-carousel', products: @trending_products %>
+  </div>
+<% end %>
+
+<div class="container">
+  <div class="row">
+    <div class="col-12 col-lg-6">
+      <%= link_to nested_taxons_path('streetstyle') do %>
+        <div class="homepage-bottom-box text-center mb-3">
+          <img class="w-100 lazyload"
+            data-src="<%= asset_path('homepage/streetstyle.jpg') %>"
+            data-srcset="<%= image_source_set('homepage/streetstyle') %>"
+            alt="<%= Spree.t('homepage.new_collection')%>" />
+
+          <div class="homepage-bottom-box-inner" role="img" aria-label="<%= Spree.t('homepage.new_collection') %>">
+            <div class="homepage-bottom-box-inner-small-text">
+              <%= Spree.t('homepage.new_collection') %>
+            </div>
+            <div class="homepage-bottom-box-inner-big-text">
+              <%= Spree.t('homepage.streetstyle') %>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
+
+    <div class="col-12 col-lg-6">
+      <%= link_to nested_taxons_path('summer-sale') do %>
+        <div class="homepage-bottom-box text-center mb-3">
+          <img class="w-100 lazyload"
+            data-src="<%= asset_path('homepage/summersale.jpg') %>"
+            data-srcset="<%= image_source_set('homepage/summersale') %>"
+            alt="<%= Spree.t('homepage.summer_sale')%>" />
+
+          <div class="homepage-bottom-box-inner">
+            <div class="homepage-bottom-box-inner-small-text">
+              <%= Spree.t('homepage.summer_sale') %>
+            </div>
+            <div class="homepage-bottom-box-inner-big-text">
+              <%= Spree.t('homepage.up_to_60') %>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
+
+<%= products_structured_data(@combined_products) %>
