--- a/frontend/app/views/spree/products/show.html.erb
+++ b/frontend/app/views/spree/products/show.html.erb
@@ -10,20 +10,20 @@
   <div class="container pt-4 product-details">
 
     <div class="modal fade" id="picturesModal" tabindex="-1" role="dialog" >
-      <div class="modal-dialog mw-100" role="document">
-        <div class="modal-content">
+      <div class="modal-dialog--zoom modal-dialog mw-100 h-100 mt-0 mb-0" role="document">
+        <div class="modal-content h-100">
           <div class="modal-body d-flex flex-column">
             <button class="modal-close" type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&#x2715;</span>
             </button>
-            <div class="d-flex product-details-images">
+            <div class="d-flex justify-content-center align-items-center product-details-images h-100">
               <% if @product.variant_images.size > 1 %>
                 <div class="d-none d-sm-block product-details-thumbnails" data-hook="product_thumbnails">
                   <%= render 'spree/shared/carousel/thumbnails',
                              group_id: 'main-product-modal-carousel',
                              id: 'productModalThumbnailsCarousel',
                              trigger_id: 'productCarousel',
-                             per_page: 5
+                             per_page: 4
                   %>
                 </div>
               <% end %>
