--- a/frontend/app/views/spree/shared/carousel/_thumbnails.html.erb
+++ b/frontend/app/views/spree/shared/carousel/_thumbnails.html.erb
@@ -24,7 +24,7 @@
                 data-variant-id="<%= image.viewable_id %>"
               >
                 <%= lazy_image(
-                  src: main_app.url_for(image.url(:pdp_thumbnail)),
+                  src: main_app.url_for(image.url(:plp_and_carousel)),
                   class: 'd-block w-100',
                   alt: image.alt || @product.name,
                   width: 57,
