--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/carousel/single.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/carousel/single.scss
@@ -35,6 +35,13 @@
       position: relative;
       height: 0;
       padding: 0 0 100% / $photo-width-to-height-ratio 0;
+
+      .modal-dialog--zoom & {
+        @media (min-height: 780px) {
+          padding-bottom: 100% / $photo-width-to-height-ratio-zoom;
+        }
+      }
+
       img {
         position: absolute;
         height: 100%;
@@ -93,15 +100,15 @@
 
       &.active {
         img {
-          border-color: theme-color('dark-text')
+          border-color: theme-color("dark-text");
         }
       }
     }
   }
   &--empty {
     padding: 0 0 100% / $photo-width-to-height-ratio 0;
-    background: theme-color('light');
-    &>* {
+    background: theme-color("light");
+    & > * {
       display: none !important;
     }
   }
@@ -114,8 +121,7 @@
     justify-content: center;
     &-modal-opener {
       flex-basis: 430px;
-      cursor: image-url('picture-zoom.svg'), auto
+      cursor: image-url("picture-zoom.svg"), auto;
     }
   }
-
 }
