--- a/frontend/app/views/spree/users/_address.html.erb
+++ b/frontend/app/views/spree/users/_address.html.erb
@@ -11,7 +11,7 @@
   <div class="col-2">
     <div class="row">
       <div class="col-5 offset-md-2 order-1">
-        <%= link_to edit_address_path(address), class: "address-button" do %>
+        <%= link_to edit_address_path(address), method: :get, class: "address-button" do %>
           <%= inline_svg 'edit.svg', class: "delete-address-img" %>
         <% end %>
       </div>
