Fix translation keys

--- a/frontend/app/views/spree/checkout/_confirm.html.erb
+++ b/frontend/app/views/spree/checkout/_confirm.html.erb
@@ -6,7 +6,7 @@
     <%= Spree.t(:products) %>
   </h4>
   <div class="checkout-confirm-products">
-    <span class="text-uppercase mb-1 checkout-confirm-th"><%= Spree.t('checkout.product') %></span>
+    <span class="text-uppercase mb-1 checkout-confirm-th"><%= Spree.t('checkout_page.product') %></span>
     <span class="text-uppercase mb-1 checkout-confirm-th"><%= Spree.t(:price) %></span>
     <span class="text-uppercase mb-1 checkout-confirm-th"><%= Spree.t(:quantity) %></span>
     <span class="text-uppercase mb-1 checkout-confirm-th"><%= Spree.t(:total) %></span>
