--- a/frontend/app/views/spree/checkout/_delivery.html.erb
+++ b/frontend/app/views/spree/checkout/_delivery.html.erb
@@ -4,7 +4,7 @@
       <%= form.fields_for :shipments do |ship_form| %>
         <div class="shipment">
           <h4 class="text-uppercase checkout-content-header checkout-content-shipping-methods-header">
-            <%= Spree.t('checkout.delivery_method') %>
+            <%= Spree.t('checkout_page.delivery_method') %>
           </h4>
 
           <ul class="checkout-content-shipping-methods-list">
