--- a/frontend/app/views/spree/checkout/edit.html.erb
+++ b/frontend/app/views/spree/checkout/edit.html.erb
@@ -5,7 +5,7 @@
 
   <div class="row align-items-center flex-column checkout-header" data-hook="checkout_header">
     <div class="text-uppercase checkout-header-title">
-      <h1 data-hook="checkout_title"><%= Spree.t('checkout.header') %></h1>
+      <h1 data-hook="checkout_title"><%= Spree.t('checkout_page.header') %></h1>
     </div>
     <div class="checkout-progress" data-hook="checkout_progress">
       <%= checkout_progress %>
