--- a/frontend/app/views/spree/orders/_form.html.erb
+++ b/frontend/app/views/spree/orders/_form.html.erb
@@ -4,10 +4,10 @@
 
 <div class="d-table table-responsive" id="cart-detail" data-hook>
   <div class="active d-none d-lg-table-row shopping-cart-table-header" data-hook="cart_items_headers">
-    <div class="d-table-cell cart-item-description-header text-uppercase"><%= Spree.t('cart.product') %></div>
+    <div class="d-table-cell cart-item-description-header text-uppercase"><%= Spree.t('cart_page.product') %></div>
     <div class="d-table-cell"></div>
     <div class="d-table-cell cart-item-price-header text-uppercase"><%= Spree.t(:price) %></div>
-    <div class="d-table-cell cart-item-quantity-header text-uppercase"><%= Spree.t('cart.quantity') %></div>
+    <div class="d-table-cell cart-item-quantity-header text-uppercase"><%= Spree.t('cart_page.quantity') %></div>
     <div class="d-table-cell cart-item-total-header text-uppercase"><%= Spree.t(:total) %></div>
     <div class="d-table-cell cart-item-delete-header"></div>
   </div>
