Fix inline_svg deprecation

--- a/frontend/app/views/spree/products/_filters_mobile.html.erb
+++ b/frontend/app/views/spree/products/_filters_mobile.html.erb
@@ -5,7 +5,7 @@
     <div class="container">
       <div class="plp-overlay-header">
         <%= Spree.t('plp.filter_by') %>
-        <%= inline_svg 'close.svg', id: 'filter-by-overlay-hide-button' %>
+        <%= inline_svg_tag 'close.svg', id: 'filter-by-overlay-hide-button' %>
       </div>
     </div>
     <div id="filters-accordion">
