--- a/frontend/app/views/spree/products/index.html.erb
+++ b/frontend/app/views/spree/products/index.html.erb
@@ -63,7 +63,7 @@
   <div class="container">
     <div class="plp-overlay-header">
       <%= Spree.t('plp.sort_by') %>
-      <%= inline_svg 'close.svg', id: 'sort-by-overlay-hide-button' %>
+      <%= inline_svg_tag 'close.svg', id: 'sort-by-overlay-hide-button' %>
     </div>
   </div>
   <div class="plp-overlay-header-border"></div>
