--- a/frontend/app/views/spree/shared/_delete_address_popup.html.erb
+++ b/frontend/app/views/spree/shared/_delete_address_popup.html.erb
@@ -1,6 +1,6 @@
 <div class="mx-auto delete-address-popup">
   <div class="d-flex delete-address-popup-icon js-delete-address-popup-close-button">
-    <%= inline_svg "close.svg", class: "w-100 h-100" %>
+    <%= inline_svg_tag "close.svg", class: "w-100 h-100" %>
   </div>
 
   <p class="delete-address-popup-header">
