--- a/frontend/app/views/spree/shared/_copyright.html.erb
+++ b/frontend/app/views/spree/shared/_copyright.html.erb
@@ -12,7 +12,7 @@
       </div>
       <div class="order-md-1">
         <%= link_to 'https://sparksolutions.co/', target: '_blank', 'aria-label': 'Go to Spark Solutions' do %>
-          <%= inline_svg 'logo_spark.svg', class: 'footer-spree-copyright-logo-spark mx-2' %>
+          <%= inline_svg_tag 'logo_spark.svg', class: 'footer-spree-copyright-logo-spark mx-2' %>
         <% end %>
       </div>
     </div>
