--- a/frontend/app/views/spree/shared/_no_product_available.html.erb
+++ b/frontend/app/views/spree/shared/_no_product_available.html.erb
@@ -1,6 +1,6 @@
 <div class="p-0 justify-content-around mx-auto no-product-available">
   <div id= "no-product-available-close-button" class="d-flex no-product-available-icon">
-    <%= inline_svg "close.svg", class: "w-100 h-100" %>
+    <%= inline_svg_tag "close.svg", class: "w-100 h-100" %>
   </div>
 
   <p class="no-product-available-header">
