--- a/frontend/app/views/spree/users/_address.html.erb
+++ b/frontend/app/views/spree/users/_address.html.erb
@@ -12,12 +12,12 @@
     <div class="row">
       <div class="col-5 offset-md-2 order-1">
         <%= link_to edit_address_path(address), method: :get, class: "address-button" do %>
-          <%= inline_svg 'edit.svg', class: "delete-address-img" %>
+          <%= inline_svg_tag 'edit.svg', class: "delete-address-img" %>
         <% end %>
       </div>
       <div class="col-5 offset-2 offset-md-0 order-0">
         <div class="bg-transparent border-0 p-0 m-0 address-button delete-button js-delete-address-link" data-address="<%= address_path(address) %>">
-          <%= inline_svg 'garbage_2.svg', class: "delete-address-img" %>
+          <%= inline_svg_tag 'garbage_2.svg', class: "delete-address-img" %>
         </div>
       </div>
     </div>
