[SD-580] Fixes mobile filters showing up on desktop

--- a/frontend/app/views/spree/products/_filters_mobile.html.erb
+++ b/frontend/app/views/spree/products/_filters_mobile.html.erb
@@ -1,6 +1,6 @@
 <% is_visible = params[:menu_open] ? 'block' : 'none' %>
 
-<div id="filter-by-overlay" class="plp-overlay" style="display: <%= is_visible %>;">
+<div id="filter-by-overlay" class="d-sm-none plp-overlay" style="display: <%= is_visible %>;">
   <div class="plp-scroll">
     <div class="container">
       <div class="plp-overlay-header">
