--- a/frontend/app/views/spree/products/_filters_mobile.html.erb
+++ b/frontend/app/views/spree/products/_filters_mobile.html.erb
@@ -39,7 +39,7 @@
         </div>
         <div id="collapseFour" class="collapse <%= 'show' unless params[:price].blank? %>" aria-labelledby="headingFour" data-parent="#filters-accordion">
           <div class="card-body pt-1">
-            <% ['Less than $50', '$50 - $100', '$101 - $150', '$151 - $200', '$201 - $300'].each do |name| %>
+            <% price_filter_values.each do |name| %>
               <% price_param = params[:price] == name ? '' : name %>
               <%= link_to permitted_params.merge(price: price_param, menu_open: 1) do %>
                 <div class="d-inline-block py-1 px-2 m-1 text-uppercase plp-overlay-card-item <%= 'plp-overlay-card-item--selected' if params[:price] == name %>">
