Fixes missing translations

--- a/frontend/app/views/spree/shared/_category_nav_bar.html.erb
+++ b/frontend/app/views/spree/shared/_category_nav_bar.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="category-links">
       <div class="category-links-header text-uppercase">
-        <%= Spree.t('category_nav_bar.categories')%>
+        <%= Spree.t('categories')%>
       </div>
 
       <ul class="pl-0">
